[project]
name = "quera-qa"
version = "0.1.0"
description = "مجموعه‌ای منتخب از سوالات و حل تمرین‌های برنامه‌نویسی پایتون برای مبانی علوم کامپیوتر، مناسب برای امتحان، تمرین و آموزش."
authors = [
    {name = "Majid Shajari",email = "shijarpy@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [ "exam", "practice", "teaching", "python"]
[project.urls]
repository = "https://github.com/MajidShajari/PythonCSQuestions"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
